--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="part1">
         <div class="hero">
             <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+            <p class="text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="button1">Sign up</button>
         </div>
         <div class="middle"></div>
         <img src="https://hips.hearstapps.com/hmg-prod/images/corned-beef-brisket-index-65ce748f8a881.jpg?crop=0.8888888888888888xw:1xh;center,top&resize=640:*" alt="corned beef">
@@ -47,21 +47,23 @@
         </div>
     </div>
     <div class="part3">
-        <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ducimus quaerat pariatur beatae neque facilis at cumque voluptatibus blanditiis veritatis tempore ipsa incidunt id, minima, eveniet laboriosam, ipsum ullam repellendus!</h4>
-        <p class="quotation">-Thor, God of Thunder</p>
+        <div class="box3">
+            <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ducimus quaerat pariatur beatae neque facilis at cumque voluptatibus blanditiis veritatis tempore ipsa incidunt id, minima, eveniet laboriosam, ipsum ullam repellendus!</h4>
+            <p class="quotation">-Thor, God of Thunder</p>
+        </div>
     </div>
     <div class="part4">
         <div class="box2">
             <div class="container2">
                 <h5>Call to action! It's time!</h5>
-                <p>Sign up to this now.</p>
+                <p class="text">Sign up to this now for this product by clicking this button to the right!</p>
             </div>
             <div class="middle"></div>
-            <button>Sign up</button>
+            <button class="button2">Sign up</button>
         </div>
     </div>
     <div class="footer">
-        <p>Copyright @ The Odin Project 2024</p>
+        <p class="foot-text">Copyright @ The Odin Project 2024</p>
     </div>
 </body>
 </html>
